# FEM_GL

./: .gitignore  CMakeLists.txt  README.md
reference/: bar101010.1.back  bar101010.1.ele  bar101010.1.face  bar101010.1.front  bar101010.1.left  bar101010.1.node  bar101010.1.right  bar101010.1.top  bar101050.1.back  bar101050.1.down  bar101050.1.ele  bar101050.1.face  bar101050.1.front  bar101050.1.left  bar101050.1.node  bar101050.1.right  bar101050.1.top  bar111.1.back  bar111.1.down  bar111.1.ele  bar111.1.face  bar111.1.front  bar111.1.left  bar111.1.node  bar111.1.right  bar111.1.top  bar20202.1.back  bar20202.1.down  bar20202.1.ele  bar20202.1.face  bar20202.1.front  bar20202.1.left  bar20202.1.node  bar20202.1.right  bar20202.1.top  bar202020.1.back  bar202020.1.ele  bar202020.1.face  bar202020.1.front  bar202020.1.left  (+38 more)
src/: Camera.cpp  Camera.h  FEMengine.cpp  FEMengine.h  floor.cpp  floor.h  glfwWindow.h  main.cpp  mainFEM.cpp  tetLoader.cpp  tetLoader.h
src/FEM/: Constitutive.cpp  Constitutive.h  FEMengine.cpp  FEMengine.h  fiber.cpp  fiber.h  neohookean.cpp  neohookean.h  virtual_fiber.cpp  virtual_fiber.h
src/cubegen/: obj.cpp  obj.h
src/loader/: plyEasyLoader.cpp  plyEasyLoader.h  tetLoader.cpp  tetLoader.h
src/render/: Camera.h  glfwWindow.cpp  glfwWindow.h  stb_image.cpp
src/shader/: camera.fs  camera.vs  cameraColor.fs  cameraColor.vs
